Mod do header, criação de menu e melhorias

--- a/indexbcp.html
+++ b/indexbcp.html
@@ -18,72 +18,67 @@
 <body>
 <header class="header">
   <section class="cabecalho">
-    <div class="cabecalho__desktop">
-      
-      <div class="cabecalho__logo">
-        <img src="./images/logo.svg" alt="" srcset="" class="logo__img">
-      </div>
+    <div class="cabecalho__logo">
+      <img src="./images/logo.svg" alt="" srcset="" class="logo__img">
+    </div>
+    <nav class="cabecalho__nav nav">
+      <button class="cabecalho__botao">
+        <span class="hamburguer"></span>
+      </button>
+      <div class="cabecalho__select menu">
+        <div class="cabecalho__esquerdo">
+          <div class="accordion__container">
+            <div class="accordion__header">
+              <span>Product</span>
+              <div class="accordion__arrow"></div>
+            </div>
 
-      <nav class="cabecalho__nav nav">
-        <button class="cabecalho__botao">
-          <span class="hamburguer"></span>
-        </button>
-        <div class="cabecalho__select menu">
-          <div class="cabecalho__esquerdo">
-            <div class="accordion__container">
-              <div class="accordion__header">
-                <span>Product</span>
-                <div class="accordion__arrow"></div>
-              </div>
+            <div class="accordion__content">
+              <a href="">Overview</a>
+              <a href="">Pricing</a>
+              <a href="">Marketplace</a>
+              <a href="">Features</a>
+              <a href="">Pricing</a>
+            </div>
+          </div>
 
-              <div class="accordion__content">
-                <a href="">Overview</a>
-                <a href="">Pricing</a>
-                <a href="">Marketplace</a>
-                <a href="">Features</a>
-                <a href="">Pricing</a>
+          <div class="accordion__container">
+            <div class="accordion__header">
+              <span>Company</span>
+              <div>
+                +
               </div>
             </div>
 
-            <div class="accordion__container">
-              <div class="accordion__header">
-                <span>Company</span>
-                <div class="accordion__arrow"></div>
-              </div>
+            <div class="accordion__content">
+              <a href="">About</a>
+              <a href="">Team</a>
+              <a href="">Blog</a>
+              <a href="">Features</a>
+            </div>
+          </div>
 
-              <div class="accordion__content">
-                <a href="">About</a>
-                <a href="">Team</a>
-                <a href="">Blog</a>
-                <a href="">Features</a>
+          <div class="accordion__container">
+            <div class="accordion__header">
+              <span>Connect</span>
+              <div>
+                +
               </div>
             </div>
 
-            <div class="accordion__container">
-              <div class="accordion__header">
-                <span>Connect</span>
-                <div class="accordion__arrow"></div>
-              </div>
-
-              <div class="accordion__content">
-                <a href="">Contact</a>
-                <a href="">Newsletter</a>
-                <a href="">LinkedIn</a>
-              </div>
-            </div>
-            <div class="cabecalho__entrada__mobile">
-              <a href="" class="cabecalho__login">Login</a>
-              <a href="" class="cabecalho__signup">Sign Up</a>
+            <div class="accordion__content">
+              <a href="">Contact</a>
+              <a href="">Newsletter</a>
+              <a href="">LinkedIn</a>
             </div>
           </div>
         </div>
-      </nav>
-    </div>
-
-    <div class="cabecalho__entrada__desktop">
-      <a href="" class="cabecalho__login">Login</a>
-      <a href="" class="cabecalho__signup">Sign Up</a>
-    </div>
+        <div class="cabecalho__entrada">
+          <a href="" class="cabecalho__login">Login</a>
+          <a href="" class="cabecalho__signup">Sign Up</a>
+        </div>
+      </div>
+    </nav>
   </section>
 
   <section class="intro">
@@ -178,6 +173,7 @@
     </div>
   </div>
 </footer>
+
 </body>
 <script src="js/main.js"></script>
 </html>
