Finalização do desafio do Frontend Mentor

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 <header class="header">
   <section class="cabecalho">
     <div class="cabecalho__desktop">
-      
       <div class="cabecalho__logo">
         <img src="./images/logo.svg" alt="" srcset="" class="logo__img">
       </div>
-
       <nav class="cabecalho__nav nav">
         <button class="cabecalho__botao">
           <span class="hamburguer"></span>
@@ -37,11 +35,11 @@
               </div>
 
               <div class="accordion__content">
-                <a href="">Overview</a>
-                <a href="">Pricing</a>
-                <a href="">Marketplace</a>
-                <a href="">Features</a>
-                <a href="">Pricing</a>
+                <a href="" class="accordion__link">Overview</a>
+                <a href="" class="accordion__link">Pricing</a>
+                <a href="" class="accordion__link">Marketplace</a>
+                <a href="" class="accordion__link">Features</a>
+                <a href="" class="accordion__link">Pricing</a>
               </div>
             </div>
 
@@ -52,10 +50,10 @@
               </div>
 
               <div class="accordion__content">
-                <a href="">About</a>
-                <a href="">Team</a>
-                <a href="">Blog</a>
-                <a href="">Features</a>
+                <a href="" class="accordion__link">About</a>
+                <a href="" class="accordion__link">Team</a>
+                <a href="" class="accordion__link">Blog</a>
+                <a href="" class="accordion__link">Features</a>
               </div>
             </div>
 
@@ -66,20 +64,20 @@
               </div>
 
               <div class="accordion__content">
-                <a href="">Contact</a>
-                <a href="">Newsletter</a>
-                <a href="">LinkedIn</a>
+                <a href="" class="accordion__link">Contact</a>
+                <a href="" class="accordion__link">Newsletter</a>
+                <a href="" class="accordion__link">LinkedIn</a>
               </div>
             </div>
+            <hr>
             <div class="cabecalho__entrada__mobile">
-              <a href="" class="cabecalho__login">Login</a>
+              <a href="" class="accordion__link" class="cabecalho__login">Login</a>
               <a href="" class="cabecalho__signup">Sign Up</a>
             </div>
           </div>
         </div>
       </nav>
     </div>
-
     <div class="cabecalho__entrada__desktop">
       <a href="" class="cabecalho__login">Login</a>
       <a href="" class="cabecalho__signup">Sign Up</a>
